--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: 400;
   /* line-height: 1.5; */
   color: #ffffff;
@@ -5613,7 +5613,7 @@ a.close.disabled {
 
 @media (min-width: 576px) {
   .modal-dialog {
-    max-width: 500px;
+    max-width: 75%;
     margin: 1.75rem auto;
   }
   .modal-dialog-scrollable {
@@ -9555,7 +9555,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 @media (min-width: 992px) {
   .page-section .page-section-heading {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     line-height: 2.5rem;
   }
 }
