--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -586,7 +586,7 @@ pre code {
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
-  margin: .5rem;
+  /* margin: .5rem; */
   justify-content: center;
   align-items: center;
 }
