--- a/assets/css/filterizr.css
+++ b/assets/css/filterizr.css
@@ -22,7 +22,7 @@ img {
 }
 
 .item-desc {
-  background-color: #c3c3c3;
+  background-color: #c3c3c3c7;
   color: white;
   position: absolute;
   /* text-transform: uppercase; */
