--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9572,7 +9572,7 @@ a.text-dark:hover, a.text-dark:focus {
   width: 100%;
   max-width: 9rem;
   height: 0.1rem;
-  background-color: #353738;
+  background-color: #c3c3c3;
   /* border-radius: 1rem; */
   /* border-color: #2c3e50 !important; */
 }
