--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -23,6 +23,7 @@ img {vertical-align: middle;}
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  background-color: #3637387d;
 }
 
 /* Position the "next button" to the right */
@@ -33,19 +34,22 @@ img {vertical-align: middle;}
 
 /* On hover, add a grey background color */
 .prev:hover, .next:hover {
-  background-color: #f1f1f1;
+  background-color:#363738;
   color: black;
 }
 
 /* Caption text */
 .text {
-  color: #525252;
+  color: #ffffff;
   font-size: 15px;
-  padding: 12px 12px;
+  padding: 10px 8px;
   position: absolute;
-  /* bottom: 8px; */
+  /* bottom: 6px; */
   width: 100%;
-  text-align: center;
+  /* text-align: center; */
+  width: 100%;
+  /* border: solid #ffffff 2px; */
+  background-color: #363738;
 }
 
 /* The dots/bullets/indicators */
