--- a/assets/css/filterizr.css
+++ b/assets/css/filterizr.css
@@ -85,7 +85,7 @@ select {
 
 /* Search control */
 .filtr-search {
-  padding: 8px;
+  padding-left: 5px;
   /* text-transform: uppercase; */
   margin-bottom: 1.2rem;
   font-size: 1rem;
