--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: 400;
   /* line-height: 1.5; */
   color: #ffffff;
@@ -75,6 +75,8 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  margin: auto;
+  max-width: 750px;
 }
 
 abbr[title],
@@ -6197,7 +6199,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #e8e8e8 !important;
+  background-color: #F5F5F2 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
