--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -44,12 +44,12 @@ img {vertical-align: middle;}
   font-size: 15px;
   padding: 10px 8px;
   position: absolute;
-  /* bottom: 6px; */
+  bottom: 0px;
   width: 100%;
   /* text-align: center; */
   width: 100%;
   /* border: solid #ffffff 2px; */
-  background-color: #363738;
+  background-color: #363738c9;
 }
 
 /* The dots/bullets/indicators */
