--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,7 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
   margin: auto;
-  max-width: 750px;
+  max-width: 600px;
 }
 
 abbr[title],
@@ -420,7 +420,7 @@ hr {
   margin-top: 3rem;
   margin-bottom: 3rem;
   border: 0;
-  max-width: 75%;
+  max-width: 90%;
   border-top: 0.125rem solid rgba(97, 97, 97, 0.1);
 }
 
@@ -3873,6 +3873,7 @@ input[type="button"].btn-block {
 
 .nav-link:hover, .nav-link:focus {
   text-decoration: none;
+  color: #007bff;
 }
 
 .nav-link.disabled {
@@ -3989,6 +3990,7 @@ input[type="button"].btn-block {
 .navbar-nav .nav-link {
   padding-right: 0;
   padding-left: 0;
+  /* color:white; */
 }
 
 .navbar-nav .dropdown-menu {
@@ -4111,7 +4113,7 @@ input[type="button"].btn-block {
   }
 }
 
-@media (min-width: 992px) {
+/* @media (min-width: 992px) { */
   .navbar-expand-lg {
     flex-flow: row nowrap;
     justify-content: flex-start;
@@ -4137,7 +4139,7 @@ input[type="button"].btn-block {
   .navbar-expand-lg .navbar-toggler {
     display: none;
   }
-}
+/* } */
 
 @media (max-width: 1199.98px) {
   .navbar-expand-xl > .container,
