--- a/assets/css/tutorial.css
+++ b/assets/css/tutorial.css
@@ -76,9 +76,10 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-top: 0;
   line-height: 1.6;
+  word-spacing: 1.5px;
   margin-bottom: 1rem;
   margin: auto;
-  max-width: 600px;
+  /* max-width: 600px; */
 }
 
 abbr[title],
@@ -361,7 +362,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  font-weight: 600;
   line-height: 1.2;
 }
 
@@ -422,7 +423,7 @@ hr {
   margin-top: 3rem;
   margin-bottom: 3rem;
   border: 0;
-  max-width: 90%;
+  max-width: 100%;
   border-top: 0.125rem solid rgba(97, 97, 97, 0.4);
 }
 
@@ -549,31 +550,31 @@ pre code {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-right: auto;
+  margin-left: auto; */
 }
 
 @media (min-width: 576px) {
   .container {
-    max-width: 540px;
+    max-width: 100%;
   }
 }
 
 @media (min-width: 768px) {
   .container {
-    max-width: 720px;
+    max-width: 100%;
   }
 }
 
 @media (min-width: 992px) {
   .container {
-    max-width: 960px;
+    max-width: 100%;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 100%;
   }
 }
 
@@ -9818,4 +9819,6 @@ form .row:first-child .floating-label-form-group {
 
 .copyright {
   background-color: #363738;
+  z-index: 100;
+  position: relative;
 }
